<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_container_adverts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="#d3d3d3"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_adverts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:cardCornerRadius="6dp"
            app:contentPadding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/leckerli_one"
                        android:text="@string/annonce_num"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_advert_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="13dp"
                        android:fontFamily="@font/leckerli_one" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/leckerli_one"
                        android:text="@string/titre"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_advert_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/leckerli_one" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/leckerli_one"
                        android:text="@string/auteur"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_advert_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/leckerli_one" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/leckerli_one"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_advert_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/leckerli_one" />

                </LinearLayout>
                <Button
                    android:id="@+id/button_details_advert"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_marginStart="150dp"
                    android:text="@string/details" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
</LinearLayout>



