<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".activity.CategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="?android:attr/textColorHint"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/leckerli_one"
                android:text="ANNONCES "
                />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            android:layout_marginStart="15dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_activity_advert_create"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:clickable="true"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:backgroundTint="?android:attr/textColorHint"
                android:layout_marginStart="150dp"
                android:text="@string/ajouter_maj" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="140dp"
            app:cardBackgroundColor="?android:attr/textColorHint"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/leckerli_one"
                android:text="@string/categories"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="@font/leckerli_one"
                android:text="@string/cliquez_sur_une_cat_gorie_pour_acc_der_ses_annonces"
                />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="395dp"
            android:layout_height="525dp"
            android:id="@+id/recycler_view_categories"
            android:layout_marginTop="200dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="255dp"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progress_bar_categories"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:indeterminateTint="@color/black"
            android:indeterminate="true"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="80dp"
            style="?android:attr/progressBarStyleHorizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="255dp"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>